--- a/src/app/components/add-document-collaborator/add-document-collaborator.component.html
+++ b/src/app/components/add-document-collaborator/add-document-collaborator.component.html
@@ -1,6 +1,6 @@
 <div class="set-12 dialog-head">
   <div class="set-9">
-    <h3>{{dialogTitle}}</h3>
+    <h3>Agregar Colaborador</h3>
   </div>
   <div class="set-3 txt-right">
     <button type="button" mat-icon-button color="primary" (click)="killDialog()">
