--- a/src/app/documents/single-document/single-document.component.scss
+++ b/src/app/documents/single-document/single-document.component.scss
@@ -109,9 +109,9 @@
       }
     }
 
-    .set-4:nth-child(1) {
-      padding-right: 20px;
-    }
+    // .set-4:nth-child(1) {
+    //   padding-right: 20px;
+    // }
 
     .set-4:nth-child(2) {
       padding: 0 10px;
