--- a/src/app/components/add-document-collaborator/add-document-collaborator.component.scss
+++ b/src/app/components/add-document-collaborator/add-document-collaborator.component.scss
@@ -3,4 +3,16 @@
     display: flex;
     align-items: center;
   }
+
+  .dialog-body {
+    margin-top: 20px;
+
+    .set-3 {
+      padding-left: 20px;
+    }
+
+    .ctrls {
+      text-align: right;
+    }
+  }
 }
