--- a/src/app/components/add-document-collaborator/add-document-collaborator.component.html
+++ b/src/app/components/add-document-collaborator/add-document-collaborator.component.html
@@ -8,3 +8,62 @@
     </button>
   </div>
 </div>
+
+<div class="set-12 dialog-body">
+  <div class="set-12">
+    <mat-form-field appearance="outline">
+      <mat-label>Búscar categoría</mat-label>
+      <mat-chip-list #chipList>
+        <mat-chip *ngFor="let category of selectedCategories" (removed)="removeCategory(category)">
+          {{category}}
+          <button matChipRemove>
+            <mat-icon>cancel</mat-icon>
+          </button>
+        </mat-chip>
+
+        <input placeholder="..." #categoryInput [formControl]="categoryCtrl" [matAutocomplete]="auto"
+          [matChipInputFor]="chipList" [matChipInputSeparatorKeyCodes]="separatorKeysCodes"
+          (matChipInputTokenEnd)="addCategory($event)">
+      </mat-chip-list>
+
+      <mat-autocomplete #auto="matAutocomplete" (optionSelected)="categorySelected($event)">
+        <mat-option *ngFor="let category of filteredCategories | async" [value]="category">
+          <small>{{category}}</small>
+        </mat-option>
+      </mat-autocomplete>
+    </mat-form-field>
+  </div>
+
+  <div class="set-12 row">
+    <div class="set-6">
+      <mat-form-field appearance="outline">
+        <mat-label>Correo electrónico</mat-label>
+        <input type="text" matInput>
+      </mat-form-field>
+    </div>
+
+    <div class="set-3">
+      <mat-form-field appearance="outline">
+        <mat-label>Tipo</mat-label>
+        <mat-select>
+          <mat-option></mat-option>
+        </mat-select>
+      </mat-form-field>
+    </div>
+
+    <div class="set-3">
+      <mat-form-field appearance="outline">
+        <mat-label>Cobertura</mat-label>
+        <mat-select multiple>
+          <mat-option *ngFor="let state of states">
+            <small>{{state.name}}</small>
+          </mat-option>
+        </mat-select>
+      </mat-form-field>
+    </div>
+  </div>
+
+  <div class="set-12 ctrls">
+    <button type="button" mat-raised-button color="primary">Guardar</button>
+  </div>
+</div>
