--- a/src/app/components/add-document-dialog/add-document-dialog.component.html
+++ b/src/app/components/add-document-dialog/add-document-dialog.component.html
@@ -27,7 +27,7 @@
 
       <div class="set-12 section-title">
         <p>Editores</p>
-        <button type="button" (click)="addCollaboratorField()" disabled>
+        <button type="button" (click)="addCollaboratorField()">
           <small>Agregar Editor</small>
           <mat-icon>add_circle</mat-icon>
         </button>
@@ -57,7 +57,7 @@
               </div>
               <div class="set-1">
                 <button type="button" class="roundbluemini" (click)="removeCollaboratorField(i)" matTooltip="Eliminar"
-                  matTooltipPosition="left" disabled>
+                  matTooltipPosition="left">
                   <mat-icon>cancel</mat-icon>
                 </button>
               </div>
