--- a/src/app/hub/sign-up/sign-up.component.html
+++ b/src/app/hub/sign-up/sign-up.component.html
@@ -55,13 +55,13 @@
         <small>He leído y estoy de acuerdo con:</small>
       </p>
       <div class="set-12 row">
-        <ly-checkbox formControlName="terms"></ly-checkbox>
+        <mat-checkbox formControlName="terms"></mat-checkbox>
         <a href="#">
           <small>Términos y condiciones</small>
         </a>
       </div>
       <div class="set-12 row">
-        <ly-checkbox formControlName="privacy"></ly-checkbox>
+        <mat-checkbox formControlName="privacy"></mat-checkbox>
         <a href="#">
           <small>Política de privacidad</small>
         </a>
