--- a/src/styles.scss
+++ b/src/styles.scss
@@ -240,6 +240,11 @@ table {
 .roundbluemini:disabled {
   opacity: 0.7;
   cursor: not-allowed !important;
+  background: transparent;
+
+  mat-icon {
+    color: gray !important;
+  }
 }
 
 .roundgray {
