--- a/src/app/documents/single-document/single-document.component.html
+++ b/src/app/documents/single-document/single-document.component.html
@@ -72,24 +72,117 @@
         <div class="set-4">
           <p class="list-title">
             <small>Soluciones</small>
-            <mat-icon>insights</mat-icon>
+            <mat-icon class="icon-insights">insights</mat-icon>
           </p>
+
+          <ol class="top-list">
+            <li class="top-list-item">
+              <span>Inseguridad</span>
+            </li>
+            <li class="top-list-item">
+              <span>Inseguridad</span>
+            </li>
+            <li class="top-list-item">
+              <span>Inseguridad</span>
+            </li>
+          </ol>
+
         </div>
 
         <div class="set-4">
           <p class="list-title">
             <small>Problemas</small>
-            <mat-icon>warning</mat-icon>
+            <mat-icon class="icon-warnings">warning</mat-icon>
           </p>
+
+
+          <ol class="top-list">
+            <li class="top-list-item">
+              <span>Inseguridad</span>
+            </li>
+            <li class="top-list-item">
+              <span>Inseguridad</span>
+            </li>
+            <li class="top-list-item">
+              <span>Inseguridad</span>
+            </li>
+          </ol>
+
         </div>
       </mat-card>
     </div>
 
+    <!-- CATEGORIES TABLE- -->
     <div class="set-12 category-list">
       <mat-card class="set-12">
-        <div class="set-12" *ngFor="let layer of layout">
+        <p>Categorias</p>
+
+        <!-- TABLE -->
+        <table mat-table [dataSource]="categories" class="categories-table">
+          <!-- NAME Column -->
+          <ng-container matColumnDef="name">
+            <th mat-header-cell *matHeaderCellDef></th>
+            <td mat-cell *matCellDef="let element">
+              <div>
+                <span>
+                  {{element.name}}
+                </span>
+                
+                <span>
+                  <mat-icon>edit</mat-icon>
+                </span>
+              </div>
+            </td>
+          </ng-container>
+
+          <!-- USERS Column -->
+          <ng-container matColumnDef="users">
+            <th mat-header-cell *matHeaderCellDef> Usuarios </th>
+            <td mat-cell *matCellDef="let element"> {{element.users}} </td>
+          </ng-container>
+
+          <!-- Interacions Column -->
+          <ng-container matColumnDef="interactions">
+            <th mat-header-cell *matHeaderCellDef> Interacciones</th>
+            <td mat-cell *matCellDef="let element"> {{element.interactions}} </td>
+          </ng-container>
+
+          <!-- SOLUTIONS Column -->
+          <ng-container matColumnDef="solutions">
+            <th mat-header-cell *matHeaderCellDef> Soluciones</th>
+            <td mat-cell *matCellDef="let element"> {{element.solutions}} </td>
+          </ng-container>
+
+          <!-- PROBLEMS Column -->
+          <ng-container matColumnDef="problems">
+            <th mat-header-cell *matHeaderCellDef> Problemas</th>
+            <td mat-cell *matCellDef="let element"> {{element.problems}} </td>
+          </ng-container>
+
+          <!-- RANKING Column -->
+          <ng-container matColumnDef="ranking">
+            <th mat-header-cell *matHeaderCellDef> Ranking</th>
+            <td mat-cell *matCellDef="let element"> {{element.ranking}} </td>
+          </ng-container>
+
+          <!-- ACTIONS Column -->
+          <ng-container matColumnDef="actions">
+            <th mat-header-cell *matHeaderCellDef> </th>
+            <td mat-cell *matCellDef="let element"> 
+              <button mat-icon-button>
+                <mat-icon>more_vert</mat-icon>
+              </button>   
+            </td>
+          </ng-container>
+
+          <tr mat-header-row *matHeaderRowDef="categoriesDisplayedColumns"></tr>
+          <tr mat-row *matRowDef="let row; columns: categoriesDisplayedColumns;"></tr>
+
+        </table>
+
+        <!-- <div class="set-12" *ngFor="let layer of layout">
           {{layer.category.name}}
-        </div>
+        </div> -->
       </mat-card>
     </div>
   </div>
