--- a/src/app/documents/single-document/single-document.component.html
+++ b/src/app/documents/single-document/single-document.component.html
@@ -123,15 +123,27 @@
           <ng-container matColumnDef="name">
             <th mat-header-cell *matHeaderCellDef></th>
             <td mat-cell *matCellDef="let element">
-              <div>
-                <span>
-                  {{element.name}}
-                </span>
-                
-                <span>
-                  <mat-icon>edit</mat-icon>
-                </span>
+              <div *ngIf="editingRowId == element.id; else editingMode" class="editing">
+                  <input class="text" type="text" value="{{element.name}}" #editRowName />
+                  
+                  <span (click)="saveName()">
+                    <mat-icon>check_circle</mat-icon>
+                  </span>
+              
               </div>
+
+              <ng-template #editingMode>
+                <div>
+
+                  <span class="text">
+                    {{element.name}}
+                  </span>
+                  
+                  <span (click)="handleEditing(element.id)">
+                    <mat-icon>edit</mat-icon>
+                  </span>
+                </div>
+              </ng-template>
             </td>
           </ng-container>
 
