--- a/src/app/components/breadcrumbs/breadcrumbs.component.scss
+++ b/src/app/components/breadcrumbs/breadcrumbs.component.scss
@@ -6,22 +6,38 @@
     margin-bottom: 1em;
     margin-top: 0;
     padding: 0;
- 
-    li {
+
+    > * {
       margin: 0;
       display: inline;
       margin-right: 0.2em;
-      text-decoration: underline;
-      text-decoration-color: transparent;
+      text-decoration: none;
+      text-transform: capitalize;
+      position: relative;
       cursor: pointer;
 
-      &:not(:last-child):after {
-        margin-left: 0.2em;
-        content: "/";
+      &:not(:last-child) {
+        &:after {
+          margin-left: 5px;
+          content: "/";
+          width: 5px;
+        }
+
+        &:before {
+          position: absolute;
+          content: "";
+          display: block;
+          width: 0;
+          border-top: 1px solid #000;
+          bottom: -1px;
+          left: 0;
+          transition: width 420ms linear;
+        }
       }
 
-      &:hover {
-        text-decoration-color: #000000;
+      &:hover::before {
+        width: calc(100% - 10px);
+        transition: width 120ms linear;
       }
 
       &:last-child {
