--- a/src/app/documents/single-category/single-category.component.scss
+++ b/src/app/documents/single-category/single-category.component.scss
@@ -141,4 +141,193 @@
       }
     }
   }
+
+  .col-rgt {
+    padding-left: 30px;
+
+    .head {
+      .actions {
+        display: flex;
+        justify-content: flex-end;
+        align-items: flex-start;
+
+        button {
+          &:last-child {
+            margin-left: 10pt;
+          }
+        }
+      }
+    }
+
+    .resume {
+      display: grid;
+      grid-template-columns: 350px repeat(2, 3fr);
+      grid-template-rows: 1fr;
+      column-gap: 15pt;
+      margin-bottom: 20pt;
+
+      .col {
+        width: 100%;
+        height: 100%;
+        // padding: 0 5pt;
+
+        mat-card {
+          width: 100%;
+          height: 100%;
+
+          /* FIRST CARD */
+          &.data-resume {
+            display: flex;
+            flex-direction: column;
+            align-items: flex-end;
+            justify-content: center;
+
+            .row {
+              display: grid;
+              grid-template-columns: 1fr 4fr;
+              padding: 5pt 0;
+              // column-gap: 10pt;
+
+              .text {
+                display: flex;
+                justify-content: flex-start;
+                flex-direction: column;
+                align-items: flex-start;
+                width: 100%;
+
+                p,
+                strong {
+                  display: inline-block;
+                  margin: 0;
+                }
+                strong {
+                  margin-top: 5pt;
+                  font-size: 16pt;
+                }
+              }
+            }
+
+            .roundico-green,
+            .roundico-orange {
+              width: 40pt;
+              height: 40pt;
+              border-radius: 100%;
+              overflow: hidden;
+              display: flex;
+              align-items: center;
+              justify-content: center;
+              margin-right: 20px;
+
+              mat-icon {
+                font-size: 20pt !important;
+              }
+            }
+
+            .roundico-green {
+              background: #e1f2ec;
+
+              mat-icon {
+                color: #20c588;
+              }
+            }
+
+            .roundico-orange {
+              background: #fcdbc3;
+
+              mat-icon {
+                color: #ff6d00;
+              }
+            }
+          }
+
+          p.list-title {
+            display: flex;
+            align-items: center;
+            font-weight: 600;
+            font-size: 15pt;
+
+            * {
+              margin: 0;
+            }
+
+            mat-icon {
+              margin-left: 10px;
+
+              &.icon-insights {
+                color: #20c588;
+              }
+              &.icon-warnings {
+                color: #e98282;
+              }
+            }
+          }
+
+          .top-list {
+            margin-top: 15pt;
+            margin-bottom: 15pt;
+            counter-reset: orderedlist;
+
+            .top-list-item {
+              list-style: none;
+              font-weight: 600;
+              border-bottom: 1px solid #dbdbdb;
+              padding: 0.6em 0;
+              font-size: 12pt;
+
+              &:before {
+                counter-increment: orderedlist;
+                content: counter(orderedlist);
+                font-weight: 400;
+                margin-right: 15pt;
+                font-size: 12pt;
+                color: #131313;
+              }
+            }
+          }
+        }
+      }
+    }
+
+    /* TABLE */
+    .mat-column-name {
+      // background-color: red;
+      padding: 8pt 0;
+      width: 300px;
+
+      .text-box {
+        // width: 90%;
+        margin: 0;
+        padding: 5pt;
+        border-radius: 5px;
+        background-color: #ebebeb;
+        display: flex;
+        justify-content: flex-start;
+        align-items: center;
+        text-transform: uppercase;
+        font-weight: bold;
+
+        > div {
+          margin: 0;
+        }
+
+
+        .icon {
+          background-color: #636363;
+          padding: 2pt;
+          border-radius: 3pt;
+          margin-right: 10pt;
+
+          mat-icon {
+            color: white;
+            margin: 0;
+          }
+        }
+      }
+    }
+    .mat-column-actions {
+      width: 50px;
+      padding-right: 0;
+      text-align: right;
+    }
+  }
 }
