--- a/src/app/hub/components/admin-template/admin-template.component.html
+++ b/src/app/hub/components/admin-template/admin-template.component.html
@@ -4,7 +4,7 @@
     <mat-icon>note_add</mat-icon>
   </button>
 </div>
-
+ 
 <!-- empty documents -->
 <div class="set-12 carousel-hldr" *ngIf="documents.length == 0">
   <carousel [cellsToShow]="1">
@@ -114,3 +114,5 @@
     </mat-tab-group>
   </mat-card>
 </div>
+<!-- MAPA -->
+<div class="app-map-box"></div>
