--- a/src/app/hub/components/admin-template/admin-template.component.scss
+++ b/src/app/hub/components/admin-template/admin-template.component.scss
@@ -109,6 +109,8 @@
     }
 
     .top-cards {
+      padding: 15px;
+
       .inner-card {
         display: flex;
         align-items: center;
@@ -185,3 +187,4 @@
     }
   }
 }
+
