--- a/src/app/hub/components/map-box/map-box.component.scss
+++ b/src/app/hub/components/map-box/map-box.component.scss
@@ -29,11 +29,13 @@
       margin: 0;
       padding: 15pt;
       height: 100%;
+      min-width: 180px;
 
       .title {
         font-size: 13pt;
         color: #000000;
         text-transform: uppercase;
+        font-weight: bold;
       }
 
       .data-box {
@@ -55,6 +57,7 @@
   svg.draw-map {
     width: 850px;
     height: 600px;
+    transform: scale(0.8);
 
     .land {
       fill: #f2f2f2;
