--- a/src/app/components/add-document-dialog/add-document-dialog.component.html
+++ b/src/app/components/add-document-dialog/add-document-dialog.component.html
@@ -71,6 +71,7 @@
         <button type="submit" mat-raised-button color="primary" [disabled]="documentFormGroup.invalid || submitted">
           Crear Documento
         </button>
+        <mat-spinner diameter="20" *ngIf="submitted"></mat-spinner>
       </div>
     </form>
   </div>
