--- a/src/app/components/spider-chart/spider-chart.component.html
+++ b/src/app/components/spider-chart/spider-chart.component.html
@@ -1,1 +1,3 @@
-<canvas baseChart [data]="spiderData" [options]="spiderChartOptions" [type]="spiderChartType"> </canvas>
+<div class="container">
+  <canvas baseChart [data]="spiderData" [options]="spiderChartOptions" [type]="spiderChartType"> </canvas>
+</div>
