--- a/src/app/components/spider-chart/spider-chart.component.scss
+++ b/src/app/components/spider-chart/spider-chart.component.scss
@@ -3,3 +3,13 @@
     width: 100%;
   }
 }
+
+.container {
+  width: 100%;
+  height: 100%;
+  position: relative;
+  background-color: white;
+  border-radius: 5px;
+  padding: 30px;
+  box-shadow: 0 2px 1px -1px #0003, 0 1px 1px #00000024, 0 1px 3px #0000001f;
+}
