Maquetado de pagina

--- a/src/app/components/horizontal-stats/horizontal-stats.component.html
+++ b/src/app/components/horizontal-stats/horizontal-stats.component.html
@@ -2,10 +2,10 @@
   <div class="set-12">
     <div class="set-6">
       <div class="set-12">
-        <div class="set-3 image-box gray-icon-color">
-          <img src="../../../assets/images/PANDOlogo.png" alt="" />
+        <div class="set-4 image-box gray-icon-color" style="margin-left: 15px;">
+          <img src="../../../assets/images/avatar.svg" alt="" />
         </div>
-        <div class="set-8 texts-box">
+        <div class="set-7 texts-box">
           <p class="name">Usuarios</p>
           <p class="amount">{{ usersTotal }}</p>
         </div>
@@ -13,10 +13,10 @@
     </div>
     <div class="set-6">
       <div class="set-12">
-        <div class="set-3 image-box red-icon-color">
-          <img src="../../../assets/images/PANDOlogo.png" alt="" width="42" />
+        <div class="set-4 image-box red-icon-color">
+          <img src="../../../assets/images/hand.svg" alt="" width="42" />
         </div>
-        <div class="set-8 texts-box">
+    <div class="set-7 texts-box" style="margin-left: 15px;">
           <p class="name">Interacciones</p>
           <p class="amount">{{ interactionsTotal }}</p>
         </div>
