--- a/src/app/components/app-pagelet/app-pagelet.component.scss
+++ b/src/app/components/app-pagelet/app-pagelet.component.scss
@@ -1,6 +1,7 @@
 :host {
   position: fixed;
   z-index: 99;
+  width: 100%;
 
   mat-toolbar {
     height: 80px;
@@ -21,6 +22,7 @@
       width: 30%;
       float: left;
       cursor: pointer;
+      max-width: 55px;
     }
 
     input {
