--- a/src/app/components/spider-chart/spider-chart.component.scss
+++ b/src/app/components/spider-chart/spider-chart.component.scss
@@ -1,7 +1,11 @@
 :host {
   canvas {
     width: 100%;
+    max-width: 300px;
   }
+  margin: 0px;
+  width: 100%;
+
 }
 
 .container {
@@ -11,5 +15,6 @@
   background-color: white;
   border-radius: 5px;
   padding: 30px;
+  margin: 0px;
   box-shadow: 0 2px 1px -1px #0003, 0 1px 1px #00000024, 0 1px 3px #0000001f;
 }
