--- a/src/app/components/top10-list/top10-list.component.scss
+++ b/src/app/components/top10-list/top10-list.component.scss
@@ -1,3 +1,7 @@
+:host {
+  min-width: 500px;
+}
+
 .mat-line {
   font-size: small;
 }
@@ -8,8 +12,8 @@
 .container {
   background-color: white;
   border-radius: 0.5rem;
-  width: 40%;
-  height: auto;
+  width: 100%;
+  height: 100%;
 }
 .container h4 {
   margin: 0;
@@ -23,6 +27,7 @@
 .progress {
   width: 100%;
   height: 100%;
+  margin: 0px 0px;
   background-color: #ff6d00;
 }
 mat-list-item {
